unpackaged/main/default/objects/Business_Systems_in_Use__c/Business_Systems_in_Use__c.object-meta.xml
<CustomObject>
    <description>Business systems including both T1 and Competitor products owned by account</description>
    <label>Business System in Use</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Business System in Use</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Systems in Use</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>