unpackaged/main/default/objects/Business_Systems_in_Use__c/fields/Next_System_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_System_Review__c</fullName>
    <label>Next System Review</label>
    <type>Date</type>
</CustomField>