unpackaged/main/default/objects/Business_Systems_in_Use__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <label>Other Details</label>
    <type>TextArea</type>
</CustomField>