unpackaged/main/default/objects/Business_Systems_in_Use__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Business Process Management</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Human Resources and Payroll</fullName>
            </value>
            <value>
                <fullName>Property and Rating</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>Spatial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>