unpackaged/main/default/objects/Business_Systems_in_Use__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <label>Release Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>