unpackaged/main/default/objects/Business_Systems_in_Use__c/fields/System_Vendor__c.field-meta.xml
<CustomField>
    <fullName>System_Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Vendor</label>
    <referenceTo>T1_Competitor__c</referenceTo>
    <relationshipLabel>Business Systems in Use</relationshipLabel>
    <relationshipName>Vendor_Product</relationshipName>
    <type>Lookup</type>
</CustomField>