unpackaged/main/default/objects/Business_Systems_in_Use__c/fields/Vendor_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Product Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.System_Vendor__c</field>
            <operation>equals</operation>
            <valueField>Vendor_Product__c.System_Vendor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vendor_Product__c</referenceTo>
    <relationshipLabel>Business Systems in Use</relationshipLabel>
    <relationshipName>Business_Systems_in_Use</relationshipName>
    <type>Lookup</type>
</CustomField>